@@ -65,4 +65,29 @@ Mod(0, 2)
 Mod(2, 7)
   *** _^_: Warning: Mod(a,b)^n with n >> b : wasteful.
 Mod(4, 7)
-Total time spent: 4
+   debug = 1
+  *** _+_: Warning: coercing quotient rings; moduli 2 and 3 -> 1.
+Mod(0, 1)
+  *** _-_: Warning: coercing quotient rings; moduli 2 and 3 -> 1.
+Mod(0, 1)
+  *** _*_: Warning: coercing quotient rings; moduli 2 and 3 -> 1.
+Mod(0, 1)
+  *** _/_: Warning: coercing quotient rings; moduli 2 and 3 -> 1.
+Mod(0, 1)
+Mod(0, 2)
+Mod(0, 2)
+Mod(1, 2)
+Mod(1, 2)
+  *** _+_: Warning: coercing quotient rings; moduli x and x + 1 -> 1.
+Mod(0, 1)
+  *** _-_: Warning: coercing quotient rings; moduli x and x + 1 -> 1.
+Mod(0, 1)
+  *** _*_: Warning: coercing quotient rings; moduli x and x + 1 -> 1.
+Mod(0, 1)
+  *** _/_: Warning: coercing quotient rings; moduli x and x + 1 -> 1.
+Mod(0, 1)
+Mod(2, x)
+Mod(0, x)
+Mod(1, x)
+Mod(1, x)
+Total time spent: 0
