@@ -27,3 +27,23 @@ Pol(0)*Mod(1,2)
 k=100000000000000000000;
 Mod(3,7)^-k
 Mod(3,7)^k
+
+\g1
+a=Mod(1,2);b=Mod(1,3);
+a+b
+a-b
+a*b
+a/b
+a+a
+a-a
+a*a
+a/a
+a=Mod(1,x);b=Mod(1,x+1);
+a+b
+a-b
+a*b
+a/b
+a+a
+a-a
+a*a
+a/a
